kubernetes/materialization.yaml
apiVersion: v1
kind: Service
metadata:
  name: iceprod-materialization
  labels:
    app: iceprod
    component: materialization
spec:
  type: NodePort
  ports:
  - name: https
    port: 443
    protocol: TCP
  selector:
    app: iceprod
    component: materialization
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iceprod-materialization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iceprod
      component: materialization
  template:
    metadata:
      labels:
        app: iceprod
        component: materialization
    spec:
      containers:
      - name: iceprod-materialization
        image: wipac/iceprod:latest
        imagePullPolicy: Always
        command: ["bin/iceprod_server.py", "-n",
                  "-c", "rest_api.url=https://iceprod2-api.icecube.wisc.edu",
                  "-c", "rest_api.auth_key=$(TOKEN)",
                  "-c", "auth.secret=$(AUTH_SECRET)",
                  "-c", "auth.url=https://iceprod2-api.icecube.wisc.edu",
                  "-c", "modules.materialization=true",
                  "-c", "materialization.port=8080"]
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 400m
            memory: 800Mi
      - name: iceprod-materialization-mongodb
        image: mongo:3.6
        command: ["mongod", "--wiredTigerCacheSizeGB", "0.5"]
        resources:
          requests:
            cpu: 500m
            memory: 1000Mi
          limits:
            cpu: 2
            memory: 2000Mi
        volumeMounts:
        - mountPath: /data/db
          name: mongo-volume
      - name: iceprod-materialization-nginx
        image: nginx:1.17-alpine
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 300Mi
        volumeMounts:
        - name: iceprod-materialization-nginx-config
          mountPath: /etc/nginx/conf.d/
        - name: materialization-iceprod-icecube-aq-tls
          mountPath: /opt/
        ports:
        - containerPort: 443
          name: https
          protocol: TCP
      volumes:
      - name: mongo-volume
        emptyDir:
          medium: "Memory"
      - name: materialization-iceprod-icecube-aq-tls
        secret:
          secretName: materialization-iceprod-icecube-aq-tls
          items:
          - key: tls.crt
            path: server.crt
          - key: tls.key
            path: server.key
      - name: iceprod-materialization-nginx-config
        configMap:
          name: iceprod-materialization-nginx-config
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iceprod-materialization-network-policy
spec:
  podSelector:
    matchLabels:
      app: iceprod
      component: materialization
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: 443
      protocol: TCP
  egress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    - port: 443
      protocol: TCP
